Adicionado a area do aluno com hanking de bootcamps, commit 2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
             <!-- Corpo do site, login -->
             <div id="corpo">
+                
                 <div id="convite">
                     <img src="/imagens/convitemenor.png" id="mulher">
                 </div>
@@ -31,7 +32,7 @@
                         <input type="text" name="login"><br>
                         <h4>Senha</h4>
                         <input type="password"><br><br>
-                        <input id="entrar" type="button" value="Entrar">
+                        <a href="abaAluno.html"><input id="entrar" type="button" value="Entrar" ></a>
                         <h6>Não é aluno?<br><a href="cadastro.html">Cadastre-se agora mesmo</a></h6>
                     </form>
                 </div>
