--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <h3>Faça seu login</h3>
                     <form>
                         <h4>Usuário</h4>
-                        <input type="text" name="login"><br>
+                        <input  class="usuario" type="text" name="login" placeholder="  Digite seu e-mail"><br>
                         <h4>Senha</h4>
-                        <input type="password"><br><br>
+                        <input class="senha" type="password" name="senha" placeholder="  Digite sua senha"><br><br>
                         <a href="abaAluno.html"><input id="entrar" type="button" value="Entrar" ></a>
                         <h6>Não é aluno?<br><a href="cadastro.html">Cadastre-se agora mesmo</a></h6>
                     </form>
